Correct GitHub link in install message

--- a/messages/install.txt
+++ b/messages/install.txt
@@ -6,4 +6,4 @@ To see the snippets available, check out the README.md file via the `Python Web 
 
 Enjoy!
 
-GitHub homepage: https://github.com/futureprogrammer360/Python%20Web%20Scraping%20Snippets
+GitHub homepage: https://github.com/futureprogrammer360/Python-Web-Scraping-Snippets
